    - improved output of non-ascii characters in usage messages
    - fixed printf format strings

  * src/tools/korg2gig.cpp:
    - fixed c++11 narrowing warnings
    - fixed fine tuning which was not translated at all

  * src/tools/gigdump.cpp:
    - additionally print VelocityUpperLimit and DimensionUpperLimits of all
      dimension regions

  * packaging changes:
    - Automake: set environment variable GCC_COLORS=auto to allow GCC to
      auto detect whether it (sh/c)ould output its messages in color.

Version 4.0.0 (14 Jul 2015)
  * general changes:
    - minor Makefile fix for parallel make
    - Mac OS X: link with CoreFoundation (for the UUID function)
    - removed gcc 4.7 warnings
    - modernized configure script
    - removed usage of deprecated Automake variable INCLUDES
    - added new command line tool "gigmerge"
    - added "const" keyword to several methods
    - added new command line tool "gig2mono"
    - added man page for "sf2dump"
    - added new command line tool "korgdump" (and a man page for it)
    - added new command line tool "korg2gig" (and a man page for it)
    - moved source files of command line tools to new subdir src/tools
    - libgig.so and libakai.so files are now installed under
      $(prefix)/lib/libgig/ by default.
    - Header files are now installed under $(prefix)/include/libgig/ by default.
    - Fixed various packaging issues regarding installation directories
      (fixes #218).
    - added new command line tool "gig2stereo" (and a man page for it)
    - unit tests: fixed wrong return value when test suite app exits
      (patch by Ryan Schmidt)
    - added new command line tool "sf2extract" (and a man page for it)

  * SoundFont file format:
    - initial implementation
    - changed region lookup API to avoid malloc in RT threads
    - fixed GetEG1Sustain which didn't return correct value
    - bugfix: GetPan always returned -1, 0 or 1

  * KORG file format: